--- a/README
+++ b/README
@@ -2,7 +2,7 @@ LICENSE
     strucVis : Display small RNA depth of coverage on a predicted RNA
     secondary structure
 
-    Copyright (C) 2016-2017 Michael J. Axtell
+    Copyright (C) 2016-2018 Michael J. Axtell
 
     This program is free software: you can redistribute it and/or modify it
     under the terms of the GNU General Public License as published by the
@@ -45,12 +45,23 @@ INPUTS
     -n : Name of locus. Prints name in the .ps file and on the plain text
     alignments. If not provided, defaults to 'Unnamed Locus'
 
+SWITCHES
+    -x : Suppress the printing of detailed file information on the
+    post-script file
+
+    -v : Print the version and quit
+
+    -h : Print help message and quit
+
 OUTPUT
     The text-based output of RNAfold is sent to STDOUT along with a
     text-based 'read cloud' of all aligned reads. The annotated post-script
     file goes to the file indicated by -p.
 
 CHANGELOG
+  version 0.4 2018-06-19
+    Added switch -x
+
   version 0.3 2017-09-06
     Added option -n
 
